frame/support/test/tests/pallet_ui/step_006.stderr
error: expected `Config`
 --> $DIR/step_006.rs:4:12
  |
4 |     pub trait Foo {}
  |               ^^^
