frame/support/test/tests/pallet_ui/step_006.rs
#[frame_support::pallet(Example)]
mod pallet {
	#[pallet::trait_]
	pub trait Foo {}
}

fn main() {
}
